<resources>
    <string name="app_name">Triệu Phú Mobile</string>
    <string name="hide">Ẩn</string>
    <string name="money_200_000">200,000</string>
    <string name="money_400_000">400,000</string>
    <string name="money_600_000">600,000</string>
    <string name="money_1_000_000">1,000,000</string>
    <string name="money_2_000_000">2,000,000</string>
    <string name="money_3_000_000">3,000,000</string>
    <string name="money_6_000_000">6,000,000</string>
    <string name="money_10_000_000">10,000,000</string>
    <string name="money_14_000_000">14,000,000</string>
    <string name="money_22_000_000">22,000,000</string>
    <string name="money_30_000_000">30,000,000</string>
    <string name="money_40_000_000">40,000,000</string>
    <string name="money_60_000_000">60,000,000</string>
    <string name="money_85_000_000">85,000,000</string>
    <string name="money_150_000_000">150,000,000</string>
    <string name="countdownt_time">30</string>
    <string name="current_money">0</string>
    <string name="vnd">VND</string>
</resources>